package com.ExpensesTrackingApp.controllers;

public class Category {
}
